--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mobx": "^6.3.10",
+    "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
