--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "faker": "^5.5.3",
     "mobx": "^6.3.10",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
