--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/faker": "^5.5.9",
